fix overlap

--- a/quick-tabs/assets/styles-popup.css
+++ b/quick-tabs/assets/styles-popup.css
@@ -79,7 +79,7 @@ b {
   padding-top: 1px;
   padding-bottom: 1px;
   clear:both;
-  height: 30px;
+  min-height: 30px;
   cursor: hand;
   border-bottom: 1px solid rgba(0,0,0,0.07);
 }
